--- a/4-polars-tutorial-part-2.ipynb
+++ b/4-polars-tutorial-part-2.ipynb
@@ -15,7 +15,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ":dep polars = { version = \"0.28.0\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"] }"
+    ":dep polars = { version = \"0.35.0\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"] }\n",
+    "// or\n",
+    "// :dep blas-src = { git = \"https://github.com/pola-rs/polars\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fb404053-115b-4a13-86ae-63e3dde91a82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ":dep either = { version = \"1.9.0\" }\n",
+    "// or\n",
+    "// :dep blas-src = { git = \"https://github.com/bluss/either\" }"
    ]
   },
   {
@@ -23,7 +37,7 @@
    "id": "fc491aa8",
    "metadata": {},
    "source": [
-    "<hr />"
+    "---"
    ]
   },
   {
@@ -36,13 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "id": "c419627f",
    "metadata": {},
    "outputs": [],
    "source": [
     "use std::path::Path;\n",
-    "use polars::prelude::*;"
+    "use polars::prelude::*;\n",
+    "use either::Either;"
    ]
   },
   {
@@ -50,7 +65,7 @@
    "id": "c20c3f8f",
    "metadata": {},
    "source": [
-    "<hr />"
+    "---"
    ]
   },
   {
@@ -188,7 +203,7 @@
        "│ null_count ┆ 0           ┆ 0.0     ┆ 0      │\n",
        "│ mean       ┆ null        ┆ 2.0     ┆ null   │\n",
        "│ std        ┆ null        ┆ 1.0     ┆ null   │\n",
-       "│ …          ┆ …           ┆ …       ┆ …      │\n",
+       "│ min        ┆ d           ┆ 1.0     ┆ a      │\n",
        "│ 25%        ┆ null        ┆ 1.5     ┆ null   │\n",
        "│ 50%        ┆ null        ┆ 2.0     ┆ null   │\n",
        "│ 75%        ┆ null        ┆ 2.5     ┆ null   │\n",
@@ -373,11 +388,21 @@
       "shape: (3,)\n",
       "Series: 'Name' [str]\n",
       "[\n",
-      "\t\"Ali\"\n",
       "\t\"Mahmoud\"\n",
+      "\t\"Ali\"\n",
       "\t\"ThePrimeagen\"\n",
       "]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "id": "a8c3f7a6",
    "metadata": {},
    "outputs": [
@@ -483,8 +508,8 @@
      "text": [
       "shape: (1, 4)\n",
       "┌──────────────┬─────┬────────┬────────┐\n",
-      "│ ---          ┆ --- ┆ ---    ┆ ---    │\n",
       "│ Name         ┆ Age ┆ Gender ┆ Salary │\n",
+      "│ ---          ┆ --- ┆ ---    ┆ ---    │\n",
       "│ str          ┆ i32 ┆ str    ┆ i32    │\n",
       "╞══════════════╪═════╪════════╪════════╡\n",
       "│ ThePrimeagen ┆ 36  ┆ M      ┆ 250000 │\n",
@@ -506,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "id": "a2f8e919",
    "metadata": {},
    "outputs": [
@@ -523,7 +548,7 @@
        "└──────────────┴─────┴────────┴────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,24 +564,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
    "id": "265cdaea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "shape: (4,)\n",
-       "Series: 'column_0' [str]\n",
-       "[\n",
-       "\t\"Mahmoud\"\n",
-       "\t\"22\"\n",
-       "\t\"M\"\n",
-       "\t\"50000\"\n",
-       "]"
+       "shape: (4, 4)\n",
+       "┌─────────┬──────────┬──────────┬──────────────┐\n",
+       "│ columns ┆ Person 1 ┆ Person 2 ┆ Person 3     │\n",
+       "│ ---     ┆ ---      ┆ ---      ┆ ---          │\n",
+       "│ str     ┆ str      ┆ str      ┆ str          │\n",
+       "╞═════════╪══════════╪══════════╪══════════════╡\n",
+       "│ Name    ┆ Mahmoud  ┆ Ali      ┆ ThePrimeagen │\n",
+       "│ Age     ┆ 22       ┆ 25       ┆ 36           │\n",
+       "│ Gender  ┆ M        ┆ M        ┆ M            │\n",
+       "│ Salary  ┆ 50000    ┆ 60000    ┆ 250000       │\n",
+       "└─────────┴──────────┴──────────┴──────────────┘"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +595,7 @@
     "             \"Gender\" => &[\"M\", \"M\", \"M\"],\n",
     "             \"Salary\" => &[50000, 60000, 250000]).unwrap();\n",
     "\n",
-    "df.transpose().unwrap()[0]"
+    "df.transpose(Some(\"columns\"), Some(Either::Right(vec![\"Person 1\".to_string(), \"Person 2\".to_string(), \"Person 3\".to_string()]))).unwrap()"
    ]
   },
   {
@@ -714,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "id": "ea27d9f3",
    "metadata": {},
    "outputs": [
@@ -725,8 +753,8 @@
       "shape: (3, 1)\n",
       "┌───────┐\n",
       "│ Fruit │\n",
-      "│ str   │\n",
       "│ ---   │\n",
+      "│ str   │\n",
       "╞═══════╡\n",
       "│ Apple │\n",
       "│ Apple │\n",
@@ -737,9 +765,9 @@
       "│ Fruit ┆ Color  │\n",
       "│ ---   ┆ ---    │\n",
       "│ str   ┆ str    │\n",
+      "╞═══════╪════════╡\n",
       "│ Apple ┆ Red    │\n",
       "│ Apple ┆ Yellow │\n",
-      "╞═══════╪════════╡\n",
       "│ Pear  ┆ Green  │\n",
       "└───────┴────────┘\n"
      ]
@@ -755,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "id": "24750eff",
    "metadata": {},
    "outputs": [
@@ -774,7 +802,7 @@
        "└───────┘"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "bfdb9d25",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1192,7 @@
        " [NaN, 36.0, NaN, NaN]], shape=[3, 4], strides=[1, 3], layout=Ff (0xa), const ndim=2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1203,7 @@
     "             \"Gender\" => &[\"M\", \"M\", \"M\"],\n",
     "             \"Salary\" => &[Some(50000), Some(60000), None]).unwrap();\n",
     "\n",
-    "df.to_ndarray::<Float64Type>().unwrap()"
+    "df.to_ndarray::<Float64Type>(IndexOrder::Fortran).unwrap()"
    ]
   },
   {
@@ -1204,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "3e63efa8",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1253,7 @@
        "└─────────┴────────────────┴─────────────────────┴─────────────────────────┴───────────────────────┘"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "e59faf9a",
    "metadata": {},
    "outputs": [
@@ -1263,27 +1291,27 @@
        "│ ---     ┆ ---                        │\n",
        "│ str     ┆ f64                        │\n",
        "╞═════════╪════════════════════════════╡\n",
-       "│ NR      ┆ 179.28696                  │\n",
+       "│ TR      ┆ 281.309919                 │\n",
+       "│ GB      ┆ 897.5625                   │\n",
+       "│ TJ      ┆ 902.961255                 │\n",
        "│ YJ      ┆ 11.839243                  │\n",
-       "│ UG      ┆ 34.374332                  │\n",
-       "│ SN      ┆ 133.10991                  │\n",
-       "│ CA      ┆ 520.024004                 │\n",
+       "│ LV      ┆ 10.266467                  │\n",
        "└─────────┴────────────────────────────┘"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "let arr_delay_mean_df: DataFrame = flights_df.groupby([\"Airline\"]).expect(\"Airline Column must exist!\").select([\"Arrival_Delay_Minutes\"]).mean().unwrap();\n",
+    "let arr_delay_mean_df: DataFrame = flights_df.group_by([\"Airline\"]).expect(\"Airline Column must exist!\").select([\"Arrival_Delay_Minutes\"]).mean().unwrap();\n",
     "arr_delay_mean_df.head(Some(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "715ea5d8",
    "metadata": {},
    "outputs": [
@@ -1296,21 +1324,21 @@
        "│ ---     ┆ ---            ┆ ---                          │\n",
        "│ str     ┆ str            ┆ f64                          │\n",
        "╞═════════╪════════════════╪══════════════════════════════╡\n",
-       "│ GB      ┆ KUO            ┆ 39.416667                    │\n",
-       "│ TJ      ┆ TEW            ┆ 6.214286                     │\n",
-       "│ XM      ┆ BTN            ┆ 37.076923                    │\n",
-       "│ TO      ┆ LUZ            ┆ 22.118644                    │\n",
-       "│ SN      ┆ VRY            ┆ 27.142857                    │\n",
+       "│ TR      ┆ IYF            ┆ 10.634921                    │\n",
+       "│ TR      ┆ HEN            ┆ 4.0                          │\n",
+       "│ CA      ┆ UKP            ┆ 1.176471                     │\n",
+       "│ TR      ┆ ERR            ┆ 14.526667                    │\n",
+       "│ CA      ┆ EJY            ┆ 15.742857                    │\n",
        "└─────────┴────────────────┴──────────────────────────────┘"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "let dep_delay_mean_def: DataFrame = flights_df.groupby([\"Airline\", \"Origin_Airport\"]).expect(\"Airline and Origin_Airport Columns must exist!\").select([\"Departure_Delay_Minutes\"]).mean().unwrap();\n",
+    "let dep_delay_mean_def: DataFrame = flights_df.group_by([\"Airline\", \"Origin_Airport\"]).expect(\"Airline and Origin_Airport Columns must exist!\").select([\"Departure_Delay_Minutes\"]).mean().unwrap();\n",
     "dep_delay_mean_def.head(Some(5))"
    ]
   },
@@ -1340,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "4db8d4f0",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1387,7 @@
        "└─────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1398,7 @@
     "let df2: DataFrame = df!(\"Airline\" => &[\"HA\", \"EV\", \"OO\", \"VX\"],\n",
     "                         \"DepDelay\" => &[21, -8, 11, -4]).unwrap();\n",
     "\n",
-    "let df3: DataFrame = df1.join(&df2, [\"Carrier\"], [\"Airline\"], JoinType::Inner, None).unwrap();\n",
+    "let df3: DataFrame = df1.join(&df2, [\"Carrier\"], [\"Airline\"], JoinType::Inner.into()).unwrap();\n",
     "// or: let df3: DataFrame = df1.inner_join(&df2, [\"Carrier\"], [\"Airline\"]).unwrap();\n",
     "df3.head(Some(5))"
    ]
@@ -1385,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "19ed241a",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1433,7 @@
        "└─────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "4fee3a2e",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1473,7 @@
        "└─────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,11 +1493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "id": "eef0bdac",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1488,7 +1514,7 @@
        "└─────────┴──────────┴──────────┘"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
