split & bump deps versions && upgrade to notebook 7

--- a/5-probability-theory-tutorial.ipynb
+++ b/5-probability-theory-tutorial.ipynb
@@ -15,8 +15,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ":dep statrs = { version = \"0.15.0\" }\n",
-    ":dep plotters = { version = \"^0.3.4\", default_features = false, features = [\"evcxr\", \"all_series\"] }"
+    ":dep statrs = { version = \"0.16.0\" }\n",
+    "// or\n",
+    "// :dep statrs = { git = \"https://github.com/statrs-dev/statrs\" }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "581695d8-ef17-46f8-a5cd-58eedfa1a1e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ":dep plotters = { version = \"^0.3.5\", default_features = false, features = [\"evcxr\", \"all_series\"] }\n",
+    "// or\n",
+    "// :dep statrs = { git = \"https://github.com/plotters-rs/plotters\" }"
    ]
   },
   {
@@ -29,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f491c1ee",
    "metadata": {},
    "outputs": [],
@@ -108,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a37f2145",
    "metadata": {},
    "outputs": [
@@ -118,7 +131,7 @@
        "[(162.0, 0.0077111498014200905), (165.0, 0.0286124002877568), (167.0, 0.05236124932813138), (168.0, 0.0653262210511061), (168.0, 0.0653262210511061), (169.0, 0.07722030750534586), (170.0, 0.08648523542740724), (170.0, 0.08648523542740724), (171.0, 0.09177383324586816), (172.0, 0.09227036241240198), (172.0, 0.09227036241240198), (172.0, 0.09227036241240198), (173.0, 0.08789659179986477), (174.0, 0.07933198103903279), (174.0, 0.07933198103903279), (175.0, 0.06784080894510099), (176.0, 0.05496676666227962), (176.0, 0.05496676666227962), (178.0, 0.03069148492847293), (180.0, 0.01381024648433747)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a092f9f6",
    "metadata": {},
    "outputs": [
@@ -463,7 +476,7 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "33e01c22",
    "metadata": {},
    "outputs": [
@@ -567,7 +580,7 @@
        "[(0.0, 1.6069380442590007e-40), (1.0, 2.4104070663884447e-38), (2.0, 1.789727246793468e-36), (3.0, 8.769663509287653e-35), (4.0, 3.1899651015033815e-33), (5.0, 9.187099492329999e-32), (6.0, 2.1819361294284227e-30), (7.0, 4.3950427749913184e-29), (8.0, 7.663855838891474e-28), (9.0, 1.1751245619633727e-26)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "70a2703e",
    "metadata": {},
    "outputs": [
@@ -927,7 +940,7 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a58bb2fe",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1049,7 @@
        "[(0.0, 0.0), (1.0, 0.2), (2.0, 0.16000000000000003), (3.0, 0.12800000000000003), (4.0, 0.10240000000000003), (5.0, 0.08192000000000005), (6.0, 0.06553600000000004), (7.0, 0.05242880000000003), (8.0, 0.041943040000000036), (9.0, 0.03355443200000003)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8c80b747",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1401,7 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6d78e1ed",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1500,7 @@
        "[(0.0, 7.360755374842311e-6), (1.0, 0.00010485406516867851), (2.0, 0.0007225100428030384), (3.0, 0.0032093363940940488), (4.0, 0.010332884619119435), (5.0, 0.02570705266368036), (6.0, 0.05145021073840004), (7.0, 0.0851532899615837), (8.0, 0.11889944363004967), (9.0, 0.1421935778973869)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9d3d764c",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1808,7 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "80f7901a",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1907,7 @@
        "[(0.0, 0.36787944117144233), (1.0, 0.36787944117144233), (2.0, 0.18393972058572114), (3.0, 0.06131324019524039), (4.0, 0.015328310048810101), (5.0, 0.00306566200976202), (6.0, 0.0005109436682936698), (7.0, 7.299195261338139e-5), (8.0, 9.123994076672672e-6), (9.0, 1.013777119630298e-6)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "795c5564",
    "metadata": {},
    "outputs": [
@@ -2262,7 +2275,7 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8a74abf7",
    "metadata": {},
    "outputs": [
@@ -2428,7 +2441,7 @@
        "[(0.0, 0.5), (0.01, 0.49750623959634116), (0.02, 0.49502491687458405), (0.03, 0.4925559698015313), (0.04, 0.4900993366533776), (0.05, 0.4876549560141663), (0.06, 0.4852227667742541), (0.07, 0.48280270812878323), (0.08, 0.4803947195761616), (0.09, 0.47799874091655)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f003b887",
    "metadata": {},
    "outputs": [
@@ -2781,7 +2794,7 @@
        "</div>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2897,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b60d73ac",
    "metadata": {},
    "outputs": [
@@ -2907,7 +2920,7 @@
        "[(0.0, 2.0), (0.01, 1.9603973466135105), (0.02, 1.9215788783046464), (0.03, 1.8835290671684974), (0.04, 1.8462326927732715), (0.05, 1.809674836071919), (0.06, 1.773840873434315), (0.07, 1.7387164707976117), (0.08, 1.7042875779324227), (0.09, 1.670540422822544)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2942,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "af3d674d",
    "metadata": {},
    "outputs": [
@@ -3329,7 +3342,7 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3461,7 +3474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "dc6c200d",
    "metadata": {},
    "outputs": [
@@ -3471,7 +3484,7 @@
        "[(0.0, inf), (0.01, 3.969525474770118), (0.02, 2.792879016972343), (0.03, 2.2690027447147854), (0.04, 1.9552134698772794), (0.05, 1.7400739347725862), (0.06, 1.5805404178559017), (0.07, 1.455997867670957), (0.08, 1.3551684838810791), (0.09, 1.271292718201747)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3506,7 +3519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f2488c1c",
    "metadata": {},
    "outputs": [
@@ -3893,7 +3906,7 @@
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4024,7 +4037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "80a4622d",
    "metadata": {},
    "outputs": [
@@ -4034,7 +4047,7 @@
        "[(0.0, inf), (0.01, 3.1991347258556533), (0.02, 2.2736420441699328), (0.03, 1.8659655989795683), (0.04, 1.6243683359034915), (0.05, 1.4605059227421864), (0.06, 1.3403264107207216), (0.07, 1.2475548043663898), (0.08, 1.1733058070595186), (0.09, 1.1122647568838242), (0.1, 1.0610329539459686), (0.11, 1.017322808178516), (0.12, 0.9795309620956122), (0.13, 0.9464960913543444), (0.14, 0.9173538412843127), (0.15, 0.891445988344769), (0.16, 0.8682613975535706), (0.17, 0.8473964112702618), (0.18, 0.8285275395276102), (0.19, 0.8113921793012144), (0.2, 0.7957747154594765), (0.21, 0.7814963145829142), (0.22, 0.7684073061375141), (0.23, 0.7563814105223139), (0.24, 0.7453113077148054), (0.25, 0.7351051938957225), (0.26, 0.7256840763020976), (0.27, 0.7169796266949113), (0.28, 0.7089324624540194), (0.29, 0.7014907585450622), (0.3, 0.6946091180428565), (0.31, 0.6882476465723161), (0.32, 0.6823711889674139), (0.33, 0.6769486960269852), (0.34, 0.6719526964107119), (0.35, 0.6673588541302946), (0.36, 0.6631455962162304), (0.37, 0.6592937983129685), (0.38, 0.6557865184150098), (0.39, 0.6526087708790295), (0.4, 0.6497473343613965), (0.41, 0.6471905885323264), (0.42, 0.6449283753791597), (0.43, 0.6429518816861497), (0.44, 0.6412535399080088), (0.45, 0.6398269451711306), (0.46, 0.6386667865644954), (0.47, 0.6377687912411859), (0.48, 0.6371296801564724), (0.49, 0.636747134531978), (0.5, 0.6366197723675813), (0.51, 0.636747134531978), (0.52, 0.6371296801564724), (0.53, 0.6377687912411859), (0.54, 0.6386667865644955), (0.55, 0.6398269451711306), (0.56, 0.6412535399080089), (0.57, 0.6429518816861496), (0.58, 0.6449283753791598), (0.59, 0.6471905885323264), (0.6, 0.6497473343613965), (0.61, 0.6526087708790296), (0.62, 0.6557865184150098), (0.63, 0.6592937983129685), (0.64, 0.6631455962162304), (0.65, 0.6673588541302946), (0.66, 0.6719526964107118), (0.67, 0.676948696026985), (0.68, 0.6823711889674138), (0.69, 0.688247646572316), (0.7, 0.6946091180428565), (0.71, 0.7014907585450623), (0.72, 0.7089324624540194), (0.73, 0.7169796266949113), (0.74, 0.7256840763020976), (0.75, 0.7351051938957225), (0.76, 0.7453113077148052), (0.77, 0.7563814105223139), (0.78, 0.7684073061375141), (0.79, 0.7814963145829141), (0.8, 0.7957747154594765), (0.81, 0.8113921793012147), (0.82, 0.8285275395276099), (0.83, 0.8473964112702618), (0.84, 0.8682613975535705), (0.85, 0.891445988344769), (0.86, 0.9173538412843127), (0.87, 0.9464960913543444), (0.88, 0.9795309620956122), (0.89, 1.0173228081785162), (0.9, 1.0610329539459686), (0.91, 1.1122647568838244), (0.92, 1.173305807059519), (0.93, 1.2475548043663898), (0.94, 1.340326410720721), (0.95, 1.4605059227421857), (0.96, 1.624368335903491), (0.97, 1.8659655989795674), (0.98, 2.273642044169932), (0.99, 3.1991347258556524)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4069,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f73ba601",
    "metadata": {},
    "outputs": [
@@ -4456,7 +4469,7 @@
        "</div>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4576,7 +4589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "339e63fb",
    "metadata": {},
    "outputs": [
@@ -4586,7 +4599,7 @@
        "[(0.0, 0.5000000000000002), (1.0, 0.2500000000000001), (2.0, 0.12500000000000008), (3.0, 0.06250000000000003), (4.0, 0.031250000000000014), (5.0, 0.01562500000000002), (6.0, 0.007812500000000002), (7.0, 0.003906250000000001), (8.0, 0.001953125), (9.0, 0.0009765625)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4621,7 +4634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "dd4b14e0",
    "metadata": {},
    "outputs": [
@@ -4908,7 +4921,7 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5058,7 +5071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "0502467a",
    "metadata": {},
    "outputs": [
@@ -5068,7 +5081,7 @@
        "[(-10.0, 2.2699964881242427e-5), (-9.99, 2.2928103321103654e-5), (-9.98, 2.315853459040381e-5), (-9.97, 2.339128173246185e-5), (-9.96, 2.3626368022185935e-5), (-9.95, 2.3863816968400985e-5), (-9.94, 2.4103652316199415e-5), (-9.93, 2.4345898049315906e-5), (-9.92, 2.4590578392525647e-5), (-9.91, 2.483771781406686e-5)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5103,7 +5116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "e810c8d3",
    "metadata": {},
    "outputs": [
@@ -5430,7 +5443,7 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5506,7 +5519,8 @@
    "id": "bbbb1f75",
    "metadata": {},
    "source": [
-    "<hr />"
+    "---\n",
+    "---"
    ]
   }
  ],
