add support for Colab & Binder Rust env setup

--- a/7-calculus-tutorial-part-1.ipynb
+++ b/7-calculus-tutorial-part-1.ipynb
@@ -2,6 +2,47 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0f6d8195-c607-4a0a-babe-00ea6cf6d575",
+   "metadata": {},
+   "source": [
+    "## Google Colab & Binder Rust Setup\n",
+    "\n",
+    "The following cell is used to set up a Rust environment on Colab and Binder. Don't execute it locally!\n",
+    "\n",
+    "Many thanks to [`mateusvmv`](https://github.com/mateusvmv) for this hack in [`gist.github.com/korakot/ae95315ea6a3a3b33ee26203998a59a3`](https://gist.github.com/korakot/ae95315ea6a3a3b33ee26203998a59a3?permalink_comment_id=4715636#gistcomment-4715636)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a69893a-9677-4256-9ce2-69a9189931ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf /root/.local/share/jupyter/kernels\n",
+    "\n",
+    "# Nix install\n",
+    "!curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install linux --init none --no-confirm\n",
+    "!ln -s /root/.nix-profile/bin /opt/bin\n",
+    "\n",
+    "# Install evcxr\n",
+    "!nix-env -f '<nixpkgs>' -iA cargo rustc evcxr sccache\n",
+    "!evcxr_jupyter --install\n",
+    "\n",
+    "# Configure evcxr\n",
+    "!mkdir -p /root/.config/evcxr\n",
+    "!printf \":timing\\n:sccache 1\" > /root/.config/evcxr/init.evcxr\n",
+    "\n",
+    "# IPC Proxy (https://stackoverflow.com/a/74821762)\n",
+    "!wget -qO- https://gist.github.com/SpencerPark/e2732061ad19c1afa4a33a58cb8f18a9/archive/b6cff2bf09b6832344e576ea1e4731f0fb3df10c.tar.gz | tar xvz --strip-components=1\n",
+    "!python install_ipc_proxy_kernel.py --quiet --kernel=rust --implementation=ipc_proxy_kernel.py > /dev/null\n",
+    "\n",
+    "# To avoid confusion between kernel names\n",
+    "!sed -i 's/\"display_name\": \"Rust\"/\"display_name\": \"Rust-TCP\"/g' /root/.local/share/jupyter/kernels/rust_tcp/kernel.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ad92c1a",
    "metadata": {},
    "source": [
