improve colab command

--- a/1-iris-data-analysis-rust.ipynb
+++ b/1-iris-data-analysis-rust.ipynb
@@ -5,9 +5,9 @@
    "id": "f4e8c1d9-c986-44cf-96cf-52328f5af66d",
    "metadata": {},
    "source": [
-    "## Google Colab & Binder Rust Setup\n",
+    "## Google Colab Rust Setup\n",
     "\n",
-    "The following cell is used to set up a Rust environment on Colab and Binder. Don't execute it locally!\n",
+    "The following cell is used to set up a Rust environment on Colab. Don't execute it locally!\n",
     "\n",
     "Many thanks to [`mateusvmv`](https://github.com/mateusvmv) for this hack in [`gist.github.com/korakot/ae95315ea6a3a3b33ee26203998a59a3`](https://gist.github.com/korakot/ae95315ea6a3a3b33ee26203998a59a3?permalink_comment_id=4715636#gistcomment-4715636)."
    ]
@@ -19,26 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf /root/.local/share/jupyter/kernels\n",
-    "\n",
-    "# Nix install\n",
-    "!curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install linux --init none --no-confirm\n",
-    "!ln -s /root/.nix-profile/bin /opt/bin\n",
-    "\n",
-    "# Install evcxr\n",
-    "!nix-env -f '<nixpkgs>' -iA cargo rustc evcxr sccache\n",
-    "!evcxr_jupyter --install\n",
-    "\n",
-    "# Configure evcxr\n",
-    "!mkdir -p /root/.config/evcxr\n",
-    "!printf \":timing\\n:sccache 1\" > /root/.config/evcxr/init.evcxr\n",
-    "\n",
-    "# IPC Proxy (https://stackoverflow.com/a/74821762)\n",
-    "!wget -qO- https://gist.github.com/SpencerPark/e2732061ad19c1afa4a33a58cb8f18a9/archive/b6cff2bf09b6832344e576ea1e4731f0fb3df10c.tar.gz | tar xvz --strip-components=1\n",
-    "!python install_ipc_proxy_kernel.py --quiet --kernel=rust --implementation=ipc_proxy_kernel.py > /dev/null\n",
-    "\n",
-    "# To avoid confusion between kernel names\n",
-    "!sed -i 's/\"display_name\": \"Rust\"/\"display_name\": \"Rust-TCP\"/g' /root/.local/share/jupyter/kernels/rust_tcp/kernel.json"
+    "# This script sets up and spins up a Jupyter Notebook environment with a Rust kernel using Nix and IPC Proxy. \n",
+    "!wget -qO- https://gist.github.com/wiseaidev/2af6bef753d48565d11bcd478728c979/archive/3f6df40db09f3517ade41997b541b81f0976c12e.tar.gz | tar xvz --strip-components=1\n",
+    "!bash setup_evcxr_kernel.sh"
    ]
   },
   {
